style.css
/*
Theme Name: K2
Theme URI: http://getk2.com
Description: Configure from the <a href="themes.php?page=functions.php">K2 Options Panel</a>. Visit the <a href="http://getk2.com/forum">support forums</a>, <a href="http://k2.stikipad.com/docs/show/">the wiki</a> or <a href="http://code.google.com/p/kaytwo/issues/list">the bug tracker</a>.</p><p><small>Developed by <a href="http://binarybonsai.com">Michael</a>, <a href="http://chrisjdavis.org">Chris</a>, <a href="http://zeo.unic.net.my">Zeo</a>, <a href="http://stevelam.org">Steve</a> and <a href="http://nybblelabs.org.uk">Ben Sherratt</a>. Protected by <a href="http://www.opensource.org/licenses/gpl-license.php">GPL</a>.</small>
Version: Beta Two
Author: Various Artists
Author URI: http://binarybonsai.com

CSS Documentation: http://k2.stikipad.com/docs/show/CSS+Overview
*/



/*- Page Structure */

html { /* Force Vertical Scrollbar */
	/* IE */
	overflow-y: scroll; 
	/* Moz */
	height: 100%;
	margin-bottom: 0.1em;
}

* {
	padding: 0;
	margin: 0;
	}

img {
	border: 0;
	}

body {
	font: 62.5% 'Lucida Grande', Verdana, Arial, Sans-Serif; /* Resets 1em to 10px */
	color: #444;
	background: #EDEDED;
	text-align: center;
	margin: 0 0 30px;
	}

#page {
	background: white;
	text-align: left;
	margin: 0 auto;
	padding: 20px 0 10px;
	position: relative;
	width: 780px;
	border: 1px solid #ddd;
	border-top: none;
	}

* html #page { width: 770px } /* IE hack */

#header {
	padding: 0;
	margin: 0;
	position: relative;
	height: 200px;
	background: #3371A3;
	}

#primary {
	width: 500px;
	float: left;
	padding: 20px 0 10px;
	margin: 0 10px 0 30px;
	display: inline;
	}

.secondary {
	font: 1em/1.5em 'Lucida Grande', Verdana, Arial, Sans-Serif;
	padding: 10px 0;
	margin: 0 0 20px 71%;
	width: 26%;
	color: #666;
	position: relative;
	}

.comments {
	text-align: left;
	padding: 30px 0 0;
	position: relative;
	}

/*- Main Menu in Header */

ul.menu {
	margin: 0;
	padding: 0;
	position: absolute;
	bottom: 0;
	left: 20px;
	width: 90%;
	}

ul.menu li {
	display: inline;
	margin: 0;
	}

ul.menu,
ul.menu li a {
	padding: 5px 15px 6px;
	}

ul.menu li a {
	font: 1em Verdana, Helvetica, Arial, Sans-Serif;
	color: white;
	margin: 0;
	}

ul.menu li a:hover {
	background: #333;
	color: #eee !important;
	text-decoration: none;
	}

ul.menu li.current_page_item a,
ul.menu li.current_page_item a:hover {
	color: #333 !important;
	background: white;
	text-decoration: none;
	}

.admintab {
	position: absolute;
	right: 0px;
	}

* html .admintab { padding: 5px 15px 6px }	/* IE hack */
	
a img,:link img,:visited img { border:none }

/*- Sidebar Subpages Menu */

.sb-pagemenu ul {
	margin-left: 10px;
	}

.sb-pagemenu ul ul {
	margin-top: 2px;
	}

.sb-pagemenu ul ul .page_item {
	margin-left: 10px;
	padding: 0;
	}

.sb-pagemenu .current_page_item {
	}

/*- Headings */

h1, h2, h3, h4 {
	font-family: 'Trebuchet MS', Verdana, Sans-Serif;
	}

h1 { /* H1 is the title in the header */
	font-size: 3em;
	font-weight: bold;
	letter-spacing: -1px;
	margin: 0;
	padding: 75px 40px 0;
	}

h1, h1 a, h1 a:hover, h1 a:visited,
#header .description {
	text-decoration: none;
	color: white;
	}

h1 a:hover {
	text-decoration: underline;
	}

#header .description { /* Description in header */
	font-size: 1em;
	margin: 0 40px;
	}

h2 { /* H2 is what kind of page you are on. Eg. 'Monthly Archive'. */
	text-align: center;
	font-size: 2.4em;
	font-weight: bold;
	letter-spacing: -1px;
	}

.secondary h2 { /* Secondary H2 is sidebar headlines */
	font-size: 1.5em !important;
	font-weight: normal !important;
	padding: 0 !important;
	display: inline;
	}

#primary h3, #primary h4, .single #primary .k2-asides h3 { /* H3 is entry headlines. H4 is comments and replyform headlines */
	font-size: 2.4em;
	font-weight: normal;
	letter-spacing: -1px;
	}

#primary .entry-content h3 {
	font-size: 1.8em;
	font-weight: normal;
	margin-top: 25px;
	}

#primary .entry-content h4 {
	font-size: 1.5em;
	font-weight: normal;
	margin-top: 25px;
	}

#primary .k2-asides h3 {
	font-size: 1.6em;
	font-weight: normal;
	}

.entry-head {
	margin-top: 10px;
	}

body.page .entry-content h3 {
	font-size: 1.7em;
	display: block;
	padding: 15px 0 0;
	}

body.page .entry-content h4 {
	font-size: 1.5em;
	display: block;
	padding: 15px 0 0;
	}

.secondary div {
	margin: 20px 0 0;
	padding: 0;
	}
	
#primary .metalink a, #primary .metalink a:visited, /* The Metalink class takes care of the comments, edit, rss and trackback links next to the titles */
.secondary .metalink a, .secondary .metalink a:visited,
.secondary span a, .secondary span a:visited {
	color: #999;
	font-weight: normal;
	}

#primary .hentry .entry-head .metalink {
	font-size: 1.8em;
	letter-spacing: -1px;
	text-transform: lowercase;
	margin-left: 15px;
	}

#primary .k2-asides .entry-head .metalink {
	font-size: 1.4em;
	}

.single #primary .k2-asides .entry-content {
	font-size: 1.5em;
	color: #999;
	}

.comment-meta {
	margin: 0 15px 0 0;
	float: none;
	}

.comment-login, .comment-welcomeback {
	margin-top: 15px;
	color: #777;
}

#comment-personaldetails {
	margin-top: 10px;
}

.feedicon { /* Next to Comment Section Headline */
	border: 0 !important;
	padding: 0 !important;
	}

.feedlink img { /* On the sidebar */
	height: 16px;
	width: 16px;
	border: none;
	position: absolute;
	right: 0;
	}

.secondary .k2-asides {
	margin: 0;
	padding: 0 0 10px;
	word-spacing: -1px;
	}

.secondary .k2-asides .metalink {
	padding-left: 0px;
	}

.secondary span a {
	margin-left: 10px;
	}

body.page .entry-edit {
	position: absolute;
	right: 0;
	margin-top: -15px;
	}

.entry-edit a {
	border: none;
	padding: 2px;
	padding-left: 23px;
	margin-left: 10px;
	background: url('images/pencil.png') left center no-repeat;
	height: 16px;
	}

.comment-edit a {
	border: none;
	padding: 2px;
	padding-left: 23px;
	margin-left: 10px;
	background: url('images/comment_edit.png') left center no-repeat;
	height: 16px;
	}

h2, h2 a, h2 a:visited,
h3, h3 a, h3 a:visited,
h4, h4 a, h4 a:visited {
	color: #444;
	}
/* ... */

